parser.out
Grammar:

Rule 0     S' -> stmt
Rule 1     expr -> ( expr )
Rule 2     expr -> MINUS expr  [precedence=right, level=4]
Rule 3     expr -> OBJECT
Rule 4     expr -> INPUT ( expr )
Rule 5     expr -> INPUT
Rule 6     expr -> PRINT
Rule 7     expr -> ID ( )
Rule 8     expr -> ID ( expr )
Rule 9     expr -> ID ( param )
Rule 10    expr -> ID
Rule 11    expr -> expr . ID
Rule 12    expr -> expr . expr
Rule 13    expr -> ID . expr
Rule 14    expr -> ID . ID
Rule 15    expr -> STRING
Rule 16    expr -> NUMBER
Rule 17    expr -> expr OR expr
Rule 18    expr -> expr AND expr
Rule 19    expr -> expr GT expr  [precedence=nonassoc, level=1]
Rule 20    expr -> expr LT expr  [precedence=nonassoc, level=1]
Rule 21    expr -> expr EQ expr  [precedence=nonassoc, level=1]
Rule 22    expr -> expr NE expr  [precedence=nonassoc, level=1]
Rule 23    expr -> expr GE expr  [precedence=nonassoc, level=1]
Rule 24    expr -> expr LE expr  [precedence=nonassoc, level=1]
Rule 25    expr -> expr DIVIDE expr  [precedence=left, level=3]
Rule 26    expr -> expr TIMES expr  [precedence=left, level=3]
Rule 27    expr -> expr MINUS expr  [precedence=left, level=2]
Rule 28    expr -> expr PLUS expr  [precedence=left, level=2]
Rule 29    stmt -> expr ;
Rule 30    stmt -> expr ; stmt
Rule 31    stmt -> stmt ;
Rule 32    stmt -> stmt ; stmt
Rule 33    stmt -> FUNC ID { stmt }
Rule 34    stmt -> FUNC ID expr { stmt }
Rule 35    stmt -> FUNC ID param { stmt }
Rule 36    stmt -> IF expr { stmt } ELSE { stmt }
Rule 37    stmt -> IF expr { stmt }
Rule 38    stmt -> WHILE expr { stmt }
Rule 39    stmt -> RETURN expr
Rule 40    stmt -> PRINT ( expr )
Rule 41    stmt -> expr = expr
Rule 42    stmt -> ID = expr
Rule 43    param -> param , param
Rule 44    param -> expr , param
Rule 45    param -> expr , expr

Terminals, with rules where they appear:

(                    : 1 4 7 8 9 40
)                    : 1 4 7 8 9 40
,                    : 43 44 45
.                    : 11 12 13 14
;                    : 29 30 31 32
=                    : 41 42
AND                  : 18
DIVIDE               : 25
ELSE                 : 36
EQ                   : 21
FUNC                 : 33 34 35
GE                   : 23
GT                   : 19
ID                   : 7 8 9 10 11 13 14 14 33 34 35 42
IF                   : 36 37
INPUT                : 4 5
LE                   : 24
LT                   : 20
MINUS                : 2 27
NE                   : 22
NUMBER               : 16
OBJECT               : 3
OR                   : 17
PLUS                 : 28
PRINT                : 6 40
RETURN               : 39
STRING               : 15
TIMES                : 26
WHILE                : 38
error                : 
{                    : 33 34 35 36 36 37 38
}                    : 33 34 35 36 36 37 38

Nonterminals, with rules where they appear:

expr                 : 1 2 4 8 11 12 12 13 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 30 34 36 37 38 39 40 41 41 42 44 45 45
param                : 9 35 43 43 44
stmt                 : 30 31 32 32 33 34 35 36 36 37 38 0


state 0

    (0) S' -> . stmt
    (29) stmt -> . expr ;
    (30) stmt -> . expr ; stmt
    (31) stmt -> . stmt ;
    (32) stmt -> . stmt ; stmt
    (33) stmt -> . FUNC ID { stmt }
    (34) stmt -> . FUNC ID expr { stmt }
    (35) stmt -> . FUNC ID param { stmt }
    (36) stmt -> . IF expr { stmt } ELSE { stmt }
    (37) stmt -> . IF expr { stmt }
    (38) stmt -> . WHILE expr { stmt }
    (39) stmt -> . RETURN expr
    (40) stmt -> . PRINT ( expr )
    (41) stmt -> . expr = expr
    (42) stmt -> . ID = expr
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    FUNC            shift and go to state 3
    IF              shift and go to state 5
    WHILE           shift and go to state 6
    RETURN          shift and go to state 7
    PRINT           shift and go to state 8
    ID              shift and go to state 4
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    stmt                           shift and go to state 1
    expr                           shift and go to state 2

state 1

    (0) S' -> stmt .
    (31) stmt -> stmt . ;
    (32) stmt -> stmt . ; stmt
    ;               shift and go to state 15


state 2

    (29) stmt -> expr . ;
    (30) stmt -> expr . ; stmt
    (41) stmt -> expr . = expr
    (11) expr -> expr . . ID
    (12) expr -> expr . . expr
    (17) expr -> expr . OR expr
    (18) expr -> expr . AND expr
    (19) expr -> expr . GT expr
    (20) expr -> expr . LT expr
    (21) expr -> expr . EQ expr
    (22) expr -> expr . NE expr
    (23) expr -> expr . GE expr
    (24) expr -> expr . LE expr
    (25) expr -> expr . DIVIDE expr
    (26) expr -> expr . TIMES expr
    (27) expr -> expr . MINUS expr
    (28) expr -> expr . PLUS expr
    ;               shift and go to state 16
    =               shift and go to state 17
    .               shift and go to state 18
    OR              shift and go to state 19
    AND             shift and go to state 20
    GT              shift and go to state 21
    LT              shift and go to state 22
    EQ              shift and go to state 23
    NE              shift and go to state 24
    GE              shift and go to state 25
    LE              shift and go to state 26
    DIVIDE          shift and go to state 27
    TIMES           shift and go to state 28
    MINUS           shift and go to state 29
    PLUS            shift and go to state 30


state 3

    (33) stmt -> FUNC . ID { stmt }
    (34) stmt -> FUNC . ID expr { stmt }
    (35) stmt -> FUNC . ID param { stmt }
    ID              shift and go to state 31


state 4

    (42) stmt -> ID . = expr
    (7) expr -> ID . ( )
    (8) expr -> ID . ( expr )
    (9) expr -> ID . ( param )
    (10) expr -> ID .
    (13) expr -> ID . . expr
    (14) expr -> ID . . ID
  ! shift/reduce conflict for = resolved as shift
  ! shift/reduce conflict for . resolved as shift
    =               shift and go to state 32
    (               shift and go to state 33
    ;               reduce using rule 10 (expr -> ID .)
    OR              reduce using rule 10 (expr -> ID .)
    AND             reduce using rule 10 (expr -> ID .)
    GT              reduce using rule 10 (expr -> ID .)
    LT              reduce using rule 10 (expr -> ID .)
    EQ              reduce using rule 10 (expr -> ID .)
    NE              reduce using rule 10 (expr -> ID .)
    GE              reduce using rule 10 (expr -> ID .)
    LE              reduce using rule 10 (expr -> ID .)
    DIVIDE          reduce using rule 10 (expr -> ID .)
    TIMES           reduce using rule 10 (expr -> ID .)
    MINUS           reduce using rule 10 (expr -> ID .)
    PLUS            reduce using rule 10 (expr -> ID .)
    .               shift and go to state 34


state 5

    (36) stmt -> IF . expr { stmt } ELSE { stmt }
    (37) stmt -> IF . expr { stmt }
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    PRINT           shift and go to state 36
    ID              shift and go to state 37
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    expr                           shift and go to state 35

state 6

    (38) stmt -> WHILE . expr { stmt }
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    PRINT           shift and go to state 36
    ID              shift and go to state 37
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    expr                           shift and go to state 38

state 7

    (39) stmt -> RETURN . expr
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    PRINT           shift and go to state 36
    ID              shift and go to state 37
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    expr                           shift and go to state 39

state 8

    (40) stmt -> PRINT . ( expr )
    (6) expr -> PRINT .
    (               shift and go to state 40
    ;               reduce using rule 6 (expr -> PRINT .)
    =               reduce using rule 6 (expr -> PRINT .)
    .               reduce using rule 6 (expr -> PRINT .)
    OR              reduce using rule 6 (expr -> PRINT .)
    AND             reduce using rule 6 (expr -> PRINT .)
    GT              reduce using rule 6 (expr -> PRINT .)
    LT              reduce using rule 6 (expr -> PRINT .)
    EQ              reduce using rule 6 (expr -> PRINT .)
    NE              reduce using rule 6 (expr -> PRINT .)
    GE              reduce using rule 6 (expr -> PRINT .)
    LE              reduce using rule 6 (expr -> PRINT .)
    DIVIDE          reduce using rule 6 (expr -> PRINT .)
    TIMES           reduce using rule 6 (expr -> PRINT .)
    MINUS           reduce using rule 6 (expr -> PRINT .)
    PLUS            reduce using rule 6 (expr -> PRINT .)


state 9

    (1) expr -> ( . expr )
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    PRINT           shift and go to state 36
    ID              shift and go to state 37
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    expr                           shift and go to state 41

state 10

    (2) expr -> MINUS . expr
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    PRINT           shift and go to state 36
    ID              shift and go to state 37
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    expr                           shift and go to state 42

state 11

    (3) expr -> OBJECT .
    ;               reduce using rule 3 (expr -> OBJECT .)
    =               reduce using rule 3 (expr -> OBJECT .)
    .               reduce using rule 3 (expr -> OBJECT .)
    OR              reduce using rule 3 (expr -> OBJECT .)
    AND             reduce using rule 3 (expr -> OBJECT .)
    GT              reduce using rule 3 (expr -> OBJECT .)
    LT              reduce using rule 3 (expr -> OBJECT .)
    EQ              reduce using rule 3 (expr -> OBJECT .)
    NE              reduce using rule 3 (expr -> OBJECT .)
    GE              reduce using rule 3 (expr -> OBJECT .)
    LE              reduce using rule 3 (expr -> OBJECT .)
    DIVIDE          reduce using rule 3 (expr -> OBJECT .)
    TIMES           reduce using rule 3 (expr -> OBJECT .)
    MINUS           reduce using rule 3 (expr -> OBJECT .)
    PLUS            reduce using rule 3 (expr -> OBJECT .)
    {               reduce using rule 3 (expr -> OBJECT .)
    $end            reduce using rule 3 (expr -> OBJECT .)
    }               reduce using rule 3 (expr -> OBJECT .)
    )               reduce using rule 3 (expr -> OBJECT .)
    ,               reduce using rule 3 (expr -> OBJECT .)


state 12

    (4) expr -> INPUT . ( expr )
    (5) expr -> INPUT .
    (               shift and go to state 43
    ;               reduce using rule 5 (expr -> INPUT .)
    =               reduce using rule 5 (expr -> INPUT .)
    .               reduce using rule 5 (expr -> INPUT .)
    OR              reduce using rule 5 (expr -> INPUT .)
    AND             reduce using rule 5 (expr -> INPUT .)
    GT              reduce using rule 5 (expr -> INPUT .)
    LT              reduce using rule 5 (expr -> INPUT .)
    EQ              reduce using rule 5 (expr -> INPUT .)
    NE              reduce using rule 5 (expr -> INPUT .)
    GE              reduce using rule 5 (expr -> INPUT .)
    LE              reduce using rule 5 (expr -> INPUT .)
    DIVIDE          reduce using rule 5 (expr -> INPUT .)
    TIMES           reduce using rule 5 (expr -> INPUT .)
    MINUS           reduce using rule 5 (expr -> INPUT .)
    PLUS            reduce using rule 5 (expr -> INPUT .)
    {               reduce using rule 5 (expr -> INPUT .)
    $end            reduce using rule 5 (expr -> INPUT .)
    }               reduce using rule 5 (expr -> INPUT .)
    )               reduce using rule 5 (expr -> INPUT .)
    ,               reduce using rule 5 (expr -> INPUT .)


state 13

    (15) expr -> STRING .
    ;               reduce using rule 15 (expr -> STRING .)
    =               reduce using rule 15 (expr -> STRING .)
    .               reduce using rule 15 (expr -> STRING .)
    OR              reduce using rule 15 (expr -> STRING .)
    AND             reduce using rule 15 (expr -> STRING .)
    GT              reduce using rule 15 (expr -> STRING .)
    LT              reduce using rule 15 (expr -> STRING .)
    EQ              reduce using rule 15 (expr -> STRING .)
    NE              reduce using rule 15 (expr -> STRING .)
    GE              reduce using rule 15 (expr -> STRING .)
    LE              reduce using rule 15 (expr -> STRING .)
    DIVIDE          reduce using rule 15 (expr -> STRING .)
    TIMES           reduce using rule 15 (expr -> STRING .)
    MINUS           reduce using rule 15 (expr -> STRING .)
    PLUS            reduce using rule 15 (expr -> STRING .)
    {               reduce using rule 15 (expr -> STRING .)
    $end            reduce using rule 15 (expr -> STRING .)
    }               reduce using rule 15 (expr -> STRING .)
    )               reduce using rule 15 (expr -> STRING .)
    ,               reduce using rule 15 (expr -> STRING .)


state 14

    (16) expr -> NUMBER .
    ;               reduce using rule 16 (expr -> NUMBER .)
    =               reduce using rule 16 (expr -> NUMBER .)
    .               reduce using rule 16 (expr -> NUMBER .)
    OR              reduce using rule 16 (expr -> NUMBER .)
    AND             reduce using rule 16 (expr -> NUMBER .)
    GT              reduce using rule 16 (expr -> NUMBER .)
    LT              reduce using rule 16 (expr -> NUMBER .)
    EQ              reduce using rule 16 (expr -> NUMBER .)
    NE              reduce using rule 16 (expr -> NUMBER .)
    GE              reduce using rule 16 (expr -> NUMBER .)
    LE              reduce using rule 16 (expr -> NUMBER .)
    DIVIDE          reduce using rule 16 (expr -> NUMBER .)
    TIMES           reduce using rule 16 (expr -> NUMBER .)
    MINUS           reduce using rule 16 (expr -> NUMBER .)
    PLUS            reduce using rule 16 (expr -> NUMBER .)
    {               reduce using rule 16 (expr -> NUMBER .)
    $end            reduce using rule 16 (expr -> NUMBER .)
    }               reduce using rule 16 (expr -> NUMBER .)
    )               reduce using rule 16 (expr -> NUMBER .)
    ,               reduce using rule 16 (expr -> NUMBER .)


state 15

    (31) stmt -> stmt ; .
    (32) stmt -> stmt ; . stmt
    (29) stmt -> . expr ;
    (30) stmt -> . expr ; stmt
    (31) stmt -> . stmt ;
    (32) stmt -> . stmt ; stmt
    (33) stmt -> . FUNC ID { stmt }
    (34) stmt -> . FUNC ID expr { stmt }
    (35) stmt -> . FUNC ID param { stmt }
    (36) stmt -> . IF expr { stmt } ELSE { stmt }
    (37) stmt -> . IF expr { stmt }
    (38) stmt -> . WHILE expr { stmt }
    (39) stmt -> . RETURN expr
    (40) stmt -> . PRINT ( expr )
    (41) stmt -> . expr = expr
    (42) stmt -> . ID = expr
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    ;               reduce using rule 31 (stmt -> stmt ; .)
    $end            reduce using rule 31 (stmt -> stmt ; .)
    }               reduce using rule 31 (stmt -> stmt ; .)
    FUNC            shift and go to state 3
    IF              shift and go to state 5
    WHILE           shift and go to state 6
    RETURN          shift and go to state 7
    PRINT           shift and go to state 8
    ID              shift and go to state 4
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    stmt                           shift and go to state 44
    expr                           shift and go to state 2

state 16

    (29) stmt -> expr ; .
    (30) stmt -> expr ; . stmt
    (29) stmt -> . expr ;
    (30) stmt -> . expr ; stmt
    (31) stmt -> . stmt ;
    (32) stmt -> . stmt ; stmt
    (33) stmt -> . FUNC ID { stmt }
    (34) stmt -> . FUNC ID expr { stmt }
    (35) stmt -> . FUNC ID param { stmt }
    (36) stmt -> . IF expr { stmt } ELSE { stmt }
    (37) stmt -> . IF expr { stmt }
    (38) stmt -> . WHILE expr { stmt }
    (39) stmt -> . RETURN expr
    (40) stmt -> . PRINT ( expr )
    (41) stmt -> . expr = expr
    (42) stmt -> . ID = expr
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    ;               reduce using rule 29 (stmt -> expr ; .)
    $end            reduce using rule 29 (stmt -> expr ; .)
    }               reduce using rule 29 (stmt -> expr ; .)
    FUNC            shift and go to state 3
    IF              shift and go to state 5
    WHILE           shift and go to state 6
    RETURN          shift and go to state 7
    PRINT           shift and go to state 8
    ID              shift and go to state 4
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    expr                           shift and go to state 2
    stmt                           shift and go to state 45

state 17

    (41) stmt -> expr = . expr
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    PRINT           shift and go to state 36
    ID              shift and go to state 37
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    expr                           shift and go to state 46

state 18

    (11) expr -> expr . . ID
    (12) expr -> expr . . expr
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    ID              shift and go to state 48
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    PRINT           shift and go to state 36
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    expr                           shift and go to state 47

state 19

    (17) expr -> expr OR . expr
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    PRINT           shift and go to state 36
    ID              shift and go to state 37
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    expr                           shift and go to state 49

state 20

    (18) expr -> expr AND . expr
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    PRINT           shift and go to state 36
    ID              shift and go to state 37
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    expr                           shift and go to state 50

state 21

    (19) expr -> expr GT . expr
    (1) expr -> . ( expr )
    (2) expr -> . MINUS expr
    (3) expr -> . OBJECT
    (4) expr -> . INPUT ( expr )
    (5) expr -> . INPUT
    (6) expr -> . PRINT
    (7) expr -> . ID ( )
    (8) expr -> . ID ( expr )
    (9) expr -> . ID ( param )
    (10) expr -> . ID
    (11) expr -> . expr . ID
    (12) expr -> . expr . expr
    (13) expr -> . ID . expr
    (14) expr -> . ID . ID
    (15) expr -> . STRING
    (16) expr -> . NUMBER
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr GT expr
    (20) expr -> . expr LT expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr NE expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . expr TIMES expr
    (27) expr -> . expr MINUS expr
    (28) expr -> . expr PLUS expr
    (               shift and go to state 9
    MINUS           shift and go to state 10
    OBJECT          shift and go to state 11
    INPUT           shift and go to state 12
    PRINT           shift and go to state 36
    ID              shift and go to state 37
    STRING          shift and go to state 13
    NUMBER          shift and go to state 14

    expr                           shift and go to state 51

state 22
